feat: создать роуты и контроллеры для фильмов

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@ npm-debug.log*
 
 # Dependency directory
 node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+build
 
 # Optional npm cache directory
 .npm
@@ -13,5 +21,14 @@ node_modules
 .DS_Store
 .idea
 .vscode
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
 
 .env
